[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.3.1"
serde="1.0.171"
serde_json="1.0.102"
chrono = "0.4.26"
jsonwebtoken="8.3.0"
bson = "2.0"
futures = "0.3"
mongodb="2.6.0"